# kaggle-teen-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
app/pages/: __init__.py  analysis_page.py  chatbot_page.py  diagnosis_page.py
data/knowledge_base/: 01_who_guidelines.txt  02_sleep_and_mental_health.txt  03_exercise_mental_health.txt  04_social_media_research.txt  05_dataset_summary.txt
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_ml_modeling.ipynb  04_dl_modeling.ipynb  05_rag_pipeline.ipynb
src/teen_mind/data/: loader.py  preprocessor.py
src/teen_mind/models/: dl_classifier.py  ml_classifier.py
src/teen_mind/rag/: embeddings.py  qa_chain.py  vector_store.py
src/teen_mind/utils/: visualization.py
tests/: test_preprocessor.py
