[tool.poetry]
name = "teen-mind"
version = "0.1.0"
description = "소셜미디어가 청소년 정신건강에 미치는 영향을 분석하고 위험도를 예측하는 AI 서비스"
authors = ["BE02LEEJAEHOON <ljhx6787@naver.com>"]
readme = "README.md"
packages = [{include = "teen_mind", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# 데이터 처리
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"

# 딥러닝
torch = "^2.2.0"

# RAG 파이프라인
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
openai = "^1.30.0"

# 시각화
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.20.0"

# 웹 앱 (배포)
streamlit = "^1.35.0"

# 유틸리티
python-dotenv = "^1.0.0"
joblib = "^1.3.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
pytest = "^8.2.0"
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
